# watchbind

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
examples/: env.toml  fields.toml  file-manager.toml  ls.toml  test-config.toml
src/: cli.rs  color.rs  command.rs  config.rs  events.rs  exec.rs  keybindings.rs  keys.rs  main.rs  state.rs  stateful_list.rs  style.rs  terminal_manager.rs  toml.rs  tui.rs
src/config/: mod.rs  style.rs  table.rs  xdg.rs
src/config/fields/: field_selection.rs  field_separator.rs  mod.rs
src/config/keybindings/: help_menu_format.rs  key.rs  mod.rs  operations.rs
src/config/keybindings/operations/: mod.rs  operation.rs
src/config/style/: boldness.rs  color.rs  mod.rs
src/ui/: mod.rs  state.rs  terminal_manager.rs
src/ui/state/: help_menu.rs  line.rs  lines.rs  mod.rs
src/ui/state/env_variables/: env_variable.rs  mod.rs
src/ui/state/lines/: line.rs  mod.rs
src/ui/state/lines/selected_lines/: mod.rs  selected_line.rs
src/utils/: command.rs  mod.rs  possible_enum_values.rs
