[package]
name = "watchbind"
version = "0.1.12"
authors = ["Fritz Rehde <fritzrehde.work@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"
description = "A cli menu for periodically watching a program's output and executing commands on its lines through keybindings"

[dependencies]
clap = { version = "4.0.29", default-features = false, features = ["std", "help", "cargo", "derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.10"
tui = "0.19"
crossterm = "0.25"
itertools = "0.10.5"
anyhow = "1.0.66"
indoc = "1.0.8"
