[package]
name = "watchbind"
version = "0.1.19"
authors = ["Fritz Rehde <fritzrehde.work@gmail.com>"]
edition = "2021"
license-file = "LICENSE.md"
documentation = "https://github.com/fritzrehde/watchbind"
homepage = "https://github.com/fritzrehde/watchbind"
repository = "https://github.com/fritzrehde/watchbind"
description = "A CLI menu for periodically watching a program's output and executing commands on its lines through keybindings"

[dependencies]
clap = { version = "4.4.7", default-features = false, features = ["std", "help", "cargo", "derive", "error-context", "string", "color"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.7.8", default-features = false, features = ["parse"] }
ratatui = "0.22.0"
crossterm = { version = "0.27", features = ["events", "event-stream"] }
itertools = "0.11.0"
anyhow = "1.0.75"
indoc = "2.0.4"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "into_iterator", "as_ref"] }
tabwriter = "1.3.0"
parse-display = "0.8.2"
derive-new = "0.5.9"
simplelog = "0.12.1"
log = "0.4.20"
ranges = "0.3.3"
# TODO: maybe we don't need all tokio and futures features, try to reduce
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3.29"
ansi-to-tui = "3.1.0"
once_cell = "1.18.0"
strum = { version = "0.25.0", features = ["derive"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
